# architectural-py

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  model.py  mypy.ini  orm.py  pyproject.toml  requirements.txt  test_model.py
arch/: app.py  model.py  orm.py  repository.py
src/allocations/: app.py  config.py  model.py  orm.py  repository.py  services.py
src/allocations/adapters/: orm.py  repository.py
src/allocations/endpoints/: app.py
src/allocations/service_layer/: services.py
tests/: conftest.py  test_api.py  test_batches.py  test_orm.py  test_repository.py  test_services.py  utils.py
tests/e2e/: test_api.py
tests/unit/: test_batches.py  test_repository.py  test_services.py
