[project]
name = "allocations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "psycopg2-binary>=2.9.10",
    "pydantic",
    "requests",
    "sqlalchemy",
    "types-requests>=2.32.0.20250306",
    "uvicorn",
]
[tool.uv]
dev-dependencies = ["ruff", "pytest", "mypy"]

[tool.mypy]
strict = true
exclude = [".venv"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
